# rypython

./: .gitignore  pyproject.toml
rypy/find/: __init__.py
rypy/randas/: __init__.py
rypy/rex/: __init__.py
rypy/ry365/: account.py
rypy/scripts/: cshowmany.py  howmanylex.py  howmanywd.py  mergestaging.py  workdayredelivery.py
rypython/randas/: __init__.py
rypython/rex/: __init__.py
rypython/rexcel/: __init__.py  formats.py
rypython/ry365/: __init__.py  account.py  drive.py  excel.py  logger.py  sharepoint.py
rypython/ryagram/: __init__.py
rypython/rydb/: databases.py  tables.py
rypython/rysg/: windows.py
rypython/ryteams/: __init__.py
rypython/rytime/: __init__.py
rypython/scripts/: cshowmany.py  mergestaging.py
tests/: test_rypy.py
