[tool.poetry]
name = "rypython"
version = "1.3.0"
description = ""
authors = ["Ryan O'Rourke <raorourke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
O365 = "^2.0.14"
XlsxWriter = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
