[tool.poetry]
name = "rypython"
version = "1.7.0"
description = "Miscellaneous python tools"
authors = ["Ryan O'Rourke <ryan@rypy.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
O365 = "^2.0.18"
XlsxWriter = "^3.0.2"
PyYAML = "^6.0"
openpyxl = "^3.0.9"
PySimpleGUI = "^4.60.3"
pymsteams = "^0.2.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
