[tool.poetry]
name = "rypython"
version = "2.0.0-alpha.4"
description = "Miscellaneous python tools"
authors = ["Ryan O'Rourke <ryan@rypy.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
O365 = "^2.0.18"
XlsxWriter = "^3.0.2"
PyYAML = "^6.0"
openpyxl = "^3.0.9"
PySimpleGUI = "^4.60.3"
pymsteams = "^0.2.1"
pendulum = "^2.1.2"
lxml = "^4.9.1"
html5lib = "^1.1"
pydantic = "^1.10.4"
Jinja2 = "^3.1.2"
rich = "^13.3.1"
typer = "^0.7.0"
pyodbc = "^4.0.35"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
